# code-snippets

./: README.md
cpp/ROT_Excel/: README.md  ROT_Excel.cpp  ROT_Excel.sln  ROT_Excel.vcxproj  ROT_Excel.vcxproj.filters
cpp/speel-t/: CMakeLists.txt  CMakePresets.json  Jenkinsfile  vcpkg.json
cpp/speel-t/.github/workflows/: linux-exploratory.yml  windows-build.yml  windows-exploratory.yml
cpp/speel-t/linux/src/: SpeelTApp.cpp
cpp/speel-t/linux/tests/: SpeelTTests.cpp
cpp/speel-t/scripts/: SpeelTRecorder.wprp  speelt_robocopy.bat  speelt_robocopy.ps1  speelt_wpr_tests.bat
cpp/speel-t/src/: SpeelTApp.h  SpeelTUtils.h
cpp/speel-t/windows/include/: SpeelTComUtils.h  SpeelTOpcFactory.h  SpeelTTraceLogging.h  msxml6.tlh  msxml6.tli
cpp/speel-t/windows/include/excel/: VBAProject.h  Workbook.h  Worksheet.h
cpp/speel-t/windows/include/opc/: Package.h
cpp/speel-t/windows/src/: SpeelTApp.cpp  SpeelTUtils.cpp
cpp/speel-t/windows/src/excel/: VBAProject.cpp  Workbook.cpp
cpp/speel-t/windows/src/opc/: Package.cpp
cpp/speel-t/windows/tests/: SpeelTTests.cpp  SpeelTWorkbookTests.cpp
python/: README.md  requirements.txt
python/src/class_refactoring/: example.py
python/tests/: test_example.py
